--- a/app/src/main/res/layout/activity_time.xml
+++ b/app/src/main/res/layout/activity_time.xml
@@ -39,4 +39,14 @@
         android:textSize="40dp"
         android:fontFamily="Arial"
         android:text="Date2" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="80dp"
+        android:text="Button" />
 </RelativeLayout>
