--- a/app/src/main/res/layout/activity_time.xml
+++ b/app/src/main/res/layout/activity_time.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/background1">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/timeText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -19,7 +19,7 @@
         android:text="Time" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/date1Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -30,7 +30,7 @@
         android:text="Date 1" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/date2Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
